# openmp-tutorial

./: .gitignore  CMakeLists.txt  README.md
docs/: atomic.md  enviroment.md  for.md  numa.md  parallel.md  runtime.md  runtime02.md  section.md  sections.md  static_for.md  sync.md  sync02.md  synchronize.md  task.md
src/aotmic/: _atomic05.c  _sync01.cpp  aotmic05.c  atomic01.c  atomic02.c  atomic03.c  atomic04.c
src/asm/: test.c
src/directives/: flush.c  for.c  order.c  single.c
src/environment/: OMP_TEAMS_THREAD_LIMIT.c  cancel.c  device.c  die_loop.c  dynamic.c  dynamic01.c  omp_set_num_teams.c  stack_size.c  wait_policy.c
src/numa/: numa01.c  numa02.c  numa03.c
src/principle/: asm01.c  principle_atomic.c  principle_barrier.c  principle_benchmark.c  principle_copyprivate.c  principle_critilcal01.c  principle_flush.c  principle_for.c  principle_guided.c  principle_master.c  principle_nowait.c  principle_ordered.c  principle_parallel.c  principle_single.c  principle_sync01.c  rewrite_parallel.c
src/runtime/: active_level.c  alias_demo.c  alias_demo.cpp  error_nested.c  nested_lock.c  omp_get_active_level.c  omp_get_ancestor_thread_num.c  omp_get_level.c  omp_get_nested.c  omp_get_num_procs.c  omp_get_team_size.c  omp_get_thread_num.c  omp_get_wtime.c  omp_in_final.c  omp_in_parallel.c  omp_init_lock.c  omp_set_max_active_levels.c  section.c  thread_limit.c
src/schedule/: guided.c
src/sections/: example01.c  omp_init_lock.c  sections.c
src/sync/: aotmic01.c  atomic.c  atomic02.c  atomic03.c  atomic04.c  barrier01.c  barrier02.c  barrier03.c  critical.c  critical04.c  critical05.c  master.c  no_wait.c  no_wait02.c  no_wait03.c  no_wait04.c  no_wait_section02.c  no_wait_sections01.c  ordered.c  parallel.c  parallel01.c  single.c  thread_local.c
src/task/: nested.c  nested_status.c  task01.c  task02.c
