cmake_minimum_required(VERSION 2.8.12.2)
project(openmp_tutorial)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_C_COMPILER "/opt/rh/devtoolset-11/root/usr/bin/gcc")
set(CMAKE_CXX_COMPILER "/opt/rh/devtoolset-11/root/usr/bin/g++")
set(CMAKE_BUILD_TYPE "Debug")

set(CMAKE_C_FLAGS "-fopenmp -g ${CMAKE_C_FLAGS}")

add_executable(active_level src/runtime/active_level.c)

add_executable(thread_limit src/runtime/thread_limit.c)
add_executable(section src/runtime/section.c)

add_executable(example01 src/sections/example01.c)
add_executable(critical src/sync/critical.c)
add_executable(for src/directives/for.c)
add_executable(single src/directives/single.c)
add_executable(order src/directives/order.c)
add_executable(flush src/directives/flush.c)
add_executable(omp_get_wtime src/runtime/omp_get_wtime.c)
add_executable(omp_in_parallel src/runtime/omp_in_parallel.c)
add_executable(omp_get_active_level src/runtime/omp_get_active_level.c)
add_executable(omp_set_max_active_levels src/runtime/omp_set_max_active_levels.c)
add_executable(omp_get_level src/runtime/omp_get_level.c)
add_executable(omp_get_ancestor_thread_num src/runtime/omp_get_ancestor_thread_num.c)
add_executable(omp_get_thread_num src/runtime/omp_get_thread_num.c)
add_executable(omp_get_team_size src/runtime/omp_get_team_size.c)
add_executable(omp_get_num_procs src/runtime/omp_get_num_procs.c)
add_executable(omp_in_final src/runtime/omp_in_final.c)
add_executable(omp_get_nested src/runtime/omp_get_nested.c)
add_executable(stack_size src/environment/stack_size.c)
add_executable(omp_init_lock src/runtime/omp_init_lock.c)
add_executable(error_nested src/runtime/error_nested.c)
add_executable(nested_lock src/runtime/nested_lock.c)
add_executable(hint src/runtime/hint.c)
add_executable(alias_demo src/runtime/alias_demo.c)
add_executable(cancel src/environment/cancel.c)
add_executable(device src/environment/device.c)
add_executable(dynamic src/environment/dynamic.c)
add_executable(dynamic01 src/environment/dynamic01.c)

add_executable(omp_set_num_teams src/environment/omp_set_num_teams.c)
add_executable(wait_policy src/environment/wait_policy.c)
add_executable(OMP_TEAMS_THREAD_LIMIT src/environment/OMP_TEAMS_THREAD_LIMIT.c)
add_executable(die_loop src/environment/die_loop.c)
add_executable(barrier src/sync/barrier.c)
add_executable(atomic src/sync/atomic.c)
add_executable(aotmic01 src/sync/aotmic01.c)
add_executable(atomic02 src/sync/atomic02.c)
add_executable(atomic03 src/sync/atomic03.c)
add_executable(atomic04 src/sync/atomic04.c)
add_executable(parallel src/sync/parallel.c)
add_executable(no_wait src/sync/no_wait.c)
add_executable(no_wait02 src/sync/no_wait02.c)
add_executable(no_wait03 src/sync/no_wait03.c)
add_executable(no_wait04 src/sync/no_wait04.c)
add_executable(no_wait_sections01 src/sync/no_wait_sections01.c)
add_executable(no_wait_section02 src/sync/no_wait_section02.c)
add_executable(barrier01 src/sync/barrier01.c)